# rss-adapters

./: .gitignore  LICENSE  main.py  pyproject.toml
deploy/systemd/: rss-adapters.env.example  rss-adapters.service
rss_adapters/: main.py
rss_adapters/adapters/: __init__.py  proto.py  x.py
rss_adapters/schemas/: nitter.py  proto.py
